# cosmos-predict2

./: .env.paths  .env.secrets.example  .gitignore  SETUP_EVAL.md  pyproject.toml  quickstart.py
commands/: configure_docker_nvme.sh  dataset_stats.sh  docker_build.sh  docker_run.sh  download.sh  download_ckpts.sh  ec2_setup.sh  embeddings.sh  preprocess.sh  train_lora.sh
commands/teleop/: train.sh
cosmos_predict2/: checkpointer.py
cosmos_predict2/callbacks/: every_n_draw_sample.py  iter_speed.py  loss_log.py  wandb_setup.py
cosmos_predict2/configs/base/defaults/: optimizer.py
cosmos_predict2/configs/base/experiment/: cosmos_nemo_assets_lora.py  libero_cosmos.py  teleop_raw.py  yams.py
cosmos_predict2/data/: dataset_image.py  dataset_multiview.py  dataset_teleop_raw.py  dataset_utils.py  dataset_video.py  embedding_cache.py
cosmos_predict2/datasets/: utils.py
cosmos_predict2/models/: text2image_dit.py  video2world_model.py
cosmos_predict2/pipelines/: video2world.py
cosmos_predict2/tokenizers/: tokenizer.py
cosmos_predict2/utils/: checkpointer.py  optim_instantiate.py  optim_instantiate_dtensor.py
imaginaire/: trainer.py
imaginaire/callbacks/: every_n.py
imaginaire/utils/: callback.py  checkpointer.py
scripts/: download_checkpoints.py  eval_libero_cosmos.py  get_t5_embeddings.py  get_t5_embeddings_from_teleop_raw.py  libero.md  mimic.md  prepare_lerobot_cosmos_dataset.py  prepare_libero_cosmos_dataset.py  run_lerobot_inference.py  upload_eval_videos_to_s3.sh
